--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,24 @@
 </head>
 <body>
 
+  <div id="map"></div>
+   <script type="text/javascript">
+
+   var map;
+   function initMap() {
+     map = new google.maps.Map(document.getElementById('map'), {
+       center: {lat: -34.397, lng: 150.644},
+       zoom: 8
+     });
+   }
+
+       </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBnFoBS0MbtSE8mBFyfuOZuT9dtvyZKVg&callback=initMap">
+  </script>
+
 <%= yield %>
+
+
 
 </body>
 </html>
